# ChangeLog for x11-apps/xmessage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmessage/ChangeLog,v 1.40 2009/04/22 00:46:15 ranger Exp $

  22 Apr 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking xmessage-1.0.2-r1 ppc64 stable for bug 264982

  17 Apr 2009; Jeroen Roovers <jer@gentoo.org> xmessage-1.0.2-r1.ebuild:
  Stable for HPPA (bug #264982).

  11 Apr 2009; nixnut <nixnut@gentoo.org> xmessage-1.0.2-r1.ebuild:
  ppc stable #264982

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> xmessage-1.0.2-r1.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #264982

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xmessage-1.0.2-r1.ebuild:
  Stable on sparc, bug #264982

  05 Apr 2009; Markus Meier <maekke@gentoo.org> xmessage-1.0.2-r1.ebuild:
  x86 stable, bug #264982

  05 Apr 2009; Olivier Crête <tester@gentoo.org> xmessage-1.0.2-r1.ebuild:
  Stable on amd64, bug #264982

  19 Jan 2009; Rémi Cardona <remi@gentoo.org> xmessage-1.0.2-r1.ebuild:
  really remove xprint support (see bug #254874)

*xmessage-1.0.2-r1 (16 Jan 2009)

  16 Jan 2009; Rémi Cardona <remi@gentoo.org> +xmessage-1.0.2-r1.ebuild:
  remove xprint support (see bug #254874)

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xmessage-1.0.2.ebuild:
  Stable on x86 (bug #202087)

  16 Dec 2007; Markus Rothe <corsair@gentoo.org> xmessage-1.0.2.ebuild:
  Stable on ppc64; bug #202087

  16 Dec 2007; nixnut <nixnut@gentoo.org> xmessage-1.0.2.ebuild:
  Stable on ppc wrt bug 202087

  15 Dec 2007; Doug Klima <cardoe@gentoo.org> xmessage-1.0.2.ebuild:
  amd64 stable wrt bug #202087

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> xmessage-1.0.2.ebuild:
  alpha/ia64 stable wrt #202087

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> xmessage-1.0.2.ebuild:
  Sparc stable --- Bug #202087 --- good for 3 months.

  09 Nov 2007; Seemant Kulleen <seemant@gentoo.org> xmessage-1.0.1.ebuild:
  stabling sh
