@@ -1,5 +1,7 @@
 AUX xmessage-1.0.2-xprint.patch 485 RMD160 bea97bdb67bbeba0826c9b6c72d5c2296712439e SHA1 c3685bf009220ca65c37f03dc088eb834b71d641 SHA256 425c919678e805fc728f26cef209f01dd6c0893a1c7527fc7bb7c1beca110526
 DIST xmessage-1.0.2.tar.bz2 94805 RMD160 610815e2c5a04f441fb41c6f63f2b33aaa2fa254 SHA1 866dea3f01e2c9a3657bb1e56396b6ae1af4be3f SHA256 02b4016e93acab94105fa61f6dbe13082669276ab4650b871835fb7884b0c3c3
+DIST xmessage-1.0.3.tar.bz2 110604 RMD160 86c450c7e233036eb40173c4633363efe0e551f9 SHA1 a8bfefbbe7785fa0e58ed4f596f4d79ba0b4d9b2 SHA256 cfa35d3ad4ad1306e49878163982e9d54872a20a497e77ab0a8d5de05c8b3d5b
 EBUILD xmessage-1.0.2-r1.ebuild 628 RMD160 b4df2b1a2b2b3883b5c20a9a449e66f3f9256100 SHA1 88cfeabf25963ec5b2c48df3226d468a71541657 SHA256 2169bdf1c2ae0e23e30851fbfe3a94922f3fdda59705fc14ee8b75b861858f66
-MISC ChangeLog 4751 RMD160 e278bf87d52c032331324647a7850051efceb951 SHA1 d1e0d60a0564d1c4494b3a386bead9ad91b50f18 SHA256 693b93b492c271cac43e663507ceca5a1d77c11645caf77234ce49dfb2644608
+EBUILD xmessage-1.0.3.ebuild 517 RMD160 1db217cf3885c633880140ae0352431506a4885a SHA1 69a7ebd80f1ffe003e459d3589bc7fe681c74ee0 SHA256 2d7f2211c60a3826c82564244d75fccf02f1767372e89bb2598fcddde024cfb6
+MISC ChangeLog 4883 RMD160 8ad646a7fe47b2830b844a5af046ea72d7cc6978 SHA1 d5a4bccfa021bb2b050312faf98cf2fbe7a68018 SHA256 27eade375ade37e71094b224d1eeee436dc038ce8f15ebba800e7a41c1b0faa1
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
