@@ -1,0 +1,14 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmessage/xmessage-1.0.3.ebuild,v 1.1 2010/02/01 18:06:48 scarabeus Exp $
+
+inherit x-modular
+
+DESCRIPTION="display a message or query in a window (X-based /bin/echo)"
+
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="x11-libs/libXaw
+	x11-libs/libXt"
+DEPEND="${RDEPEND}"
