@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xmessage
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmessage/ChangeLog,v 1.40 2009/04/22 00:46:15 ranger Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmessage/ChangeLog,v 1.41 2010/02/01 18:06:48 scarabeus Exp $
+
+*xmessage-1.0.3 (01 Feb 2010)
+
+  01 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xmessage-1.0.3.ebuild:
+  Version bump.
 
   22 Apr 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
   Marking xmessage-1.0.2-r1 ppc64 stable for bug 264982
